# satc

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  satc-test.c  satc.h
.github/workflows/: tests.yml
cmake/: satcConfig.cmake.in
